--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,76 @@
 apply plugin: 'com.android.application'
 
+def getTime() {
+    return new Date().format("yyyyMMdd", TimeZone.getDefault());
+}
+
 android {
+
+    signingConfigs {
+        singnedconfig {
+            keyAlias 'kenwood'
+            keyPassword 'android'
+            storeFile file('../tools/debug.keystore')
+            storePassword 'android'
+        }
+    }
+
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.askey.dvr.cdr7010.setting"
-        minSdkVersion 24
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        project.archivesBaseName = "Settings";
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
-        release {
+        debug {
+            // 显示Log
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+            versionNameSuffix "-debug"
             minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
+            signingConfig signingConfigs.singnedconfig
+            jniDebuggable true
+        }
+        release {
+            // 不显示Log
+            buildConfigField "boolean", "LOG_DEBUG", "false"
+            //混淆
+            minifyEnabled false
+            //Zipalign优化
+            zipAlignEnabled false
+            // 移除无用的resource文件
+            shrinkResources false
+            //前一部分代表系统默认的android程序的混淆文件，该文件已经包含了基本的混淆声明，后一个文件是自己的定义混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.singnedconfig
         }
     }
+
+    //打包后应用名称
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def outputFile = output.outputFile
+            def fileName
+            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                fileName = "Settings.${defaultConfig.versionName}.${getTime()}.apk"
+                outputFileName  = fileName
+            }
+        }
+    }
+
     sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/values-zh-rTW'] } }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
