--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <activity android:name=".module.movie.ui.InformationStampActivity" />
         <activity android:name=".module.dirving.ui.DrivingSetting" />
         <activity android:name=".module.dirving.ui.SwitchActivity"></activity>
+
+        <activity android:name=".module.sdcard.ui.SdcardSetting"></activity>
+        <activity android:name=".module.sdcard.ui.SdcardInitialization"></activity>
+        <activity android:name=".module.sdcard.ui.SdcardInformation"></activity>
     </application>
 
 </manifest>
