--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         versionName "1.0"
         project.archivesBaseName = "Settings";
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        signingConfig signingConfigs.singnedconfig
     }
 
     buildTypes {
