--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         <activity android:name=".module.sdcard.ui.SdcardSetting" />
         <activity android:name=".module.sdcard.ui.SdcardInitialization" />
         <activity android:name=".module.sdcard.ui.SdcardInformation" />
-        <activity android:name=".module.dirving.ui.RangeSettingActivity"></activity>
+        <activity android:name=".module.dirving.ui.RangeSettingActivity"/>
     </application>
 
 </manifest>
