--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -57,7 +58,8 @@
         <activity android:name=".module.sdcard.ui.SdcardSetting" />
         <activity android:name=".module.sdcard.ui.SdcardInitialization" />
         <activity android:name=".module.sdcard.ui.SdcardInformation" />
-        <activity android:name=".module.dirving.ui.RangeSettingActivity"/>
+        <activity android:name=".module.dirving.ui.RangeSettingActivity" />
+        <activity android:name=".module.dirving.ui.DeviceInstallActivity"></activity>
     </application>
 
 </manifest>
