--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,10 +68,18 @@ android {
 
     sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/values-zh-rTW'] } }
 
+
+    repositories{
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    provided files('libs/platform_library.jar')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
