--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -59,7 +59,9 @@
         <activity android:name=".module.sdcard.ui.SdcardInitialization" />
         <activity android:name=".module.sdcard.ui.SdcardInformation" />
         <activity android:name=".module.dirving.ui.RangeSettingActivity" />
-        <activity android:name=".module.dirving.ui.DeviceInstallActivity"></activity>
+        <activity android:name=".module.dirving.ui.DeviceInstallActivity" />
+        <activity android:name=".module.notifacation.ui.NotificationSetting" />
+        <activity android:name=".module.notifacation.ui.NotifySwitchActivity"/>
     </application>
 
 </manifest>
