PUCDR-433 Notification sound volume Settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         <activity android:name=".module.system.ui.LCDBrightnessSetting" />
         <activity android:name=".module.system.ui.DateTimeSetting" />
         <activity android:name=".module.system.ui.ManualDateTimeSetting" />
+        <activity android:name=".module.system.ui.NotificationSoundSetting" />
+        <activity android:name=".module.system.ui.PlaybackSoundSetting" />
 
         <receiver
             android:name=".broadcast.SdcardReceiver"
