--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity android:name=".module.notifacation.ui.NotificationSetting" />
         <activity android:name=".module.notifacation.ui.NotifySwitchActivity"/>
         <activity android:name=".module.vehicle.ui.VehicleTypeSetting"/>
+        <activity android:name=".module.system.ui.SystemInformation" />
     </application>
 
 
