update android studio to 3.1.1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 def getTime() {
-    return new Date().format("yyyyMMdd", TimeZone.getDefault());
+    return new Date().format("yyyyMMdd", TimeZone.getDefault())
 }
 
 android {
@@ -20,7 +20,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        project.archivesBaseName = "Settings";
+        project.archivesBaseName = "Settings"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.singnedconfig
     }
@@ -71,11 +71,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    provided files('libs/platform_library.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    compileOnly files('libs/platform_library.jar')
     implementation 'com.android.support:appcompat-v7:25.4.0'
     implementation 'com.android.support:support-v4:25.4.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
