--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,14 @@
         <activity android:name=".module.system.ui.InstallationToolSetting" />
         <activity android:name=".module.system.ui.LevelerActivity" />
         <activity android:name=".module.system.ui.SatelliteReceptionStatus" />
+        <service
+            android:name=".module.system.controller.PlaybackSoundService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PlaybackSoundService"/>
+            </intent-filter>
+        </service>
     </application>
 
 
