--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <!-- 格式化SD卡 -->
     <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.MASTER_CLEAR"/>
+    <uses-permission android:name="android.permission.MASTER_CLEAR" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -70,10 +71,10 @@
         <activity android:name=".module.dirving.ui.RangeSettingActivity" />
         <activity android:name=".module.dirving.ui.DeviceInstallActivity" />
         <activity android:name=".module.notifacation.ui.NotificationSetting" />
-        <activity android:name=".module.notifacation.ui.NotifySwitchActivity"/>
-        <activity android:name=".module.vehicle.ui.VehicleTypeSetting"/>
+        <activity android:name=".module.notifacation.ui.NotifySwitchActivity" />
+        <activity android:name=".module.vehicle.ui.VehicleTypeSetting" />
         <activity android:name=".module.system.ui.SystemInformation" />
+        <activity android:name=".module.system.ui.SystemInfoDetailActivity"></activity>
     </application>
-
 
 </manifest>
