--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.MASTER_CLEAR"/>
 
+    <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="true"/>
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -79,6 +81,7 @@
         <activity android:name=".module.system.ui.InstallationToolSetting" />
         <activity android:name=".module.system.ui.LevelerActivity" />
         <activity android:name=".module.system.ui.SatelliteReceptionStatus" />
+        <activity android:name=".module.system.ui.LevelerDetailActivity" />
         <service
             android:name=".module.system.controller.PlaybackSoundService"
             android:enabled="true"
@@ -87,6 +90,7 @@
                 <action android:name="android.intent.action.PlaybackSoundService"/>
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
