增加自定义布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,8 @@
         <activity android:name=".module.system.ui.LevelerActivity" />
         <activity android:name=".module.system.ui.SatelliteReceptionStatus" />
         <activity android:name=".module.system.ui.LevelerDetailActivity" />
+        <activity android:name=".module.system.ui.BluetoothSetting" />
+        
         <service
             android:name=".module.system.controller.PlaybackSoundService"
             android:enabled="true"
