--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
         <activity android:name=".module.system.ui.SatelliteReceptionStatus" />
         <activity android:name=".module.system.ui.LevelerDetailActivity" />
         <activity android:name=".module.system.ui.BluetoothSetting" />
+        <activity android:name=".module.communication.ui.CommunicationSetting" />
+        <activity android:name=".module.communication.ui.EmergencyAutomaticNotification" />
+        <activity android:name=".module.communication.ui.EmergencyContactPerson" />
+
 
         <service
             android:name=".module.system.controller.PlaybackSoundService"
