PUCDR-351[JVC DVR] [Settings] Setup wizard Ready

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <activity android:name=".module.system.ui.MonitorScreenPowerSavingSetting" />
         <activity android:name=".module.system.ui.MonitorTimeSettings" />
         <activity android:name=".module.system.ui.MonitorOperationSettings" />
+        <activity android:name=".SetWizardHelpActivity" />
 
         <receiver
             android:name=".broadcast.SdcardReceiver"
