--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,8 @@
         <activity android:name=".module.system.ui.MonitorTimeSettings" />
         <activity android:name=".module.system.ui.MonitorOperationSettings" />
         <activity android:name=".SetWizardHelpActivity" android:launchMode="singleTop"/>
+        <activity android:name=".module.system.ui.PreviewActivity" />
+
 
         <receiver
             android:name=".broadcast.SdcardReceiver"
