--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,9 @@
         android:theme="@style/AppThemeNoAnimation">
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/SettingActivityTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
