将耗时操作放置在线程中执行

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ def getTime() {
 android {
     signingConfigs {
         singnedconfig {
-            keyAlias 'kenwood'
+            keyAlias 'android'
             keyPassword 'android'
             storeFile file('../tools/debug.keystore')
             storePassword 'android'
