revert to 7be6a0b - 修改弹出框按钮选择规则
because uncommpleted working

revert commits:
* a8a8b9c - 将耗时操作放置在线程中执行
* 4049301 - 删除升级广播所带参数
* d05e786 - 修改部分UI
* cd62e08 - 修改build toos版

This reverts commit cd62e084484bb12ccde003db09658c9397f6086e.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ def getTime() {
 android {
     signingConfigs {
         singnedconfig {
-            keyAlias 'android'
+            keyAlias 'kenwood'
             keyPassword 'android'
             storeFile file('../tools/debug.keystore')
             storePassword 'android'
