PUCDR-951 Update UI for settings | 修改部分显示的文字

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ def getTime() {
 android {
     signingConfigs {
         singnedconfig {
-            keyAlias 'kenwood'
+            keyAlias 'android'
             keyPassword 'android'
-            storeFile file('../tools/debug.keystore')
+            storeFile file('../tools/CDR7010.keystore')
             storePassword 'android'
         }
     }
