--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:theme="@style/SettingActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,7 +53,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".module.system.ui.SystemSetting" />
-        <activity android:name=".module.parking.ui.ParkingRecordSetting" />
         <activity android:name=".module.movie.ui.MovieRecordSetting" />
         <activity android:name=".module.system.ui.LCDBrightnessSetting" />
         <activity android:name=".module.system.ui.NotificationSoundSetting" />
@@ -75,13 +75,11 @@
             android:authorities="com.askey.dvr.cdr7010.setting.provider"
             android:exported="true" />
 
-        <activity android:name=".module.parking.ui.RecordingTimeActivity" />
         <activity android:name=".module.movie.ui.AudioRecordActivity" />
         <activity android:name=".module.movie.ui.ImpactSensitivityActivity" />
         <activity android:name=".module.movie.ui.InformationStampActivity" />
         <activity android:name=".module.driving.ui.DrivingSetting" />
         <activity android:name=".module.driving.ui.SwitchActivity" />
-        <activity android:name=".module.sdcard.ui.SdcardSetting" />
         <activity android:name=".module.system.ui.SdcardInformation" />
         <activity android:name=".module.system.ui.RangeSettingActivity" />
         <activity android:name=".module.notifacation.ui.NotificationSetting" />
@@ -110,8 +108,6 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".module.user.ui.UserSelectActivity" />
-        <activity android:name=".module.emergency.ui.EmergencySwitchActivity"></activity>
         <activity android:name=".module.system.ui.VehicleTypeSetting" />
     </application>
 
