PUCDR-1195[Settings] お知らせ一覧（公告列表）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,6 +99,8 @@
         <activity android:name=".module.system.ui.MountingPositionSetting" />
         <activity android:name=".module.service.ui.ServiceSetting" />
         <activity android:name=".module.service.ui.HelpActivity" />
+        <activity android:name=".module.service.ui.NotificationListActivity" />
+        <activity android:name=".module.service.ui.NotificationInfoActivity" />
 
         <service
             android:name=".module.system.controller.PlaybackSoundService"
