修改弹出风格

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
         <activity android:name=".module.system.ui.MonitorScreenPowerSavingSetting" />
         <activity android:name=".module.system.ui.MonitorTimeSettings" />
         <activity android:name=".module.system.ui.MonitorOperationSettings" />
+        <activity android:name=".DialogActivity" />
+
         <activity
             android:name=".SetWizardHelpActivity"
             android:launchMode="singleTop" />
