--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,9 @@ android {
         SDK_DIR = props.get('sdk.dir');
     }
     dependencies {
-        provided files("${SDK_DIR}/platforms/android-21/data/layoutlib.jar")
+        compileOnly files("${SDK_DIR}/platforms/android-21/data/layoutlib.jar")
     }
-    //以上是为了找到android.os.SystemProperties这个隐藏的
+    //以上是为了找到android.os.SystemProperties这个隐藏的类
 }
 
 dependencies {
