--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+PLATFORM_STORE_FILE=C:/Users/skysoft/.gradle/sign/platform.keystore
+PLATFORM_KEY_ALIAS=android
+PLATFORM_KEY_PASSWORD=android
+PLATFORM_STORE_PASSWORD=android
